--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,70 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    deployment.kubernetes.io/revision: '4'
-  creationTimestamp: '2022-06-16T13:27:19Z'
-  generation: 5
-  name: test-project-master
-  namespace: default
-  resourceVersion: '476944'
-  uid: c1545c48-9544-41d7-a820-c7c0f50cdd78
+  name: nginx-deployment
+  labels:
+    app: nginx
 spec:
-  progressDeadlineSeconds: 600
-  replicas: 1
-  revisionHistoryLimit: 10
+  replicas: 3
   selector:
     matchLabels:
-      app: test-project-master
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+      app: nginx
   template:
     metadata:
-      creationTimestamp: null
       labels:
-        app: test-project-master
+        app: nginx
     spec:
       containers:
-        - image: 073328469200.dkr.ecr.ap-south-1.amazonaws.com/test-project:72eaf296f47acbea453f47c6cf1827bbc705a884
-          imagePullPolicy: IfNotPresent
-          name: back-end
-          resources: {}
-          terminationMessagePath: /dev/termination-log
-          terminationMessagePolicy: File
-          volumeMounts:
-            - mountPath: /mnt/secrets-store
-              name: secrets-store-inline
-              readOnly: true
-      dnsPolicy: ClusterFirst
-      restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
-      volumes:
-        - csi:
-            driver: secrets-store.csi.k8s.io
-            readOnly: true
-            volumeAttributes:
-              secretProviderClass: test-project-master-ygur
-          name: secrets-store-inline
-status:
-  conditions:
-    - lastTransitionTime: '2022-07-03T20:10:08Z'
-      lastUpdateTime: '2022-07-03T20:10:08Z'
-      message: Deployment does not have minimum availability.
-      reason: MinimumReplicasUnavailable
-      status: 'False'
-      type: Available
-    - lastTransitionTime: '2022-07-03T20:20:05Z'
-      lastUpdateTime: '2022-07-03T20:20:05Z'
-      message: ReplicaSet "test-project-master-c65b5bc57" has timed out progressing.
-      reason: ProgressDeadlineExceeded
-      status: 'False'
-      type: Progressing
-  observedGeneration: 5
-  replicas: 2
-  unavailableReplicas: 2
-  updatedReplicas: 1
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80
