--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,21 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
-  labels:
-    app: nginx
+  name: project-name-master
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: project-name-master
   template:
     metadata:
       labels:
-        app: nginx
+        app: project-name-master
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
+      - name: back-end
+        image: {client_aws_url}/project-name:{commit_id_image_tag}
         ports:
         - containerPort: 80
+        envFrom:
+        - secretRef:
+          name: {secret_manager_name}
