--- a/manifest.yaml
+++ b/manifest.yaml
@@ -19,4 +19,4 @@ spec:
             - containerPort: 80
           envFrom:
             - secretRef:
-                name: {secret_manager_name}
+                name: '{secret_manager_name}'
